# hisol

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
scripts/: build_windows.ps1
src/: app_info.hpp  cli.cpp  cli.hpp  commands.cpp  commands.hpp  console.cpp  console.hpp  cookie_jar.cpp  cookie_jar.hpp  http_client.cpp  http_client.hpp  main.cpp  options.hpp  sol_bridge.cpp  sol_bridge.hpp  sol_session.cpp  sol_session.hpp  stdio.cpp  stdio.hpp  text.cpp  text.hpp  tls.cpp  tls.hpp  trace.cpp  trace.hpp  url.cpp  url.hpp
